k8s/media-stack/base/apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-root
              mountPath: /export
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media-root
          persistentVolumeClaim:
            claimName: nfs-export-root
